# Aegion

./: .editorconfig  .gitignore  COURIER_TEST_SUMMARY.md  COVERAGE_IMPROVEMENT_SUMMARY.md  COVERAGE_REPORT.md  EVENTBUS_TEST_COMPLETION.md  Makefile  README.md  TESTING_GUIDE.md  TESTING_SUMMARY.md  TEST_COVERAGE_SUMMARY.md  cliff.toml  coverage  go.mod  go.sum
.github/workflows/: build.yml  ci.yml  release.yml  security.yml
cmd/aegion/: flags_lifecycle_test.go  lifecycle.go  main.go  routes.go  routes_handlers_test.go  server.go
configs/: aegion.production.yaml  aegion.staging.yaml  aegion.test.yaml  aegion.yaml
configs/modules/: admin.yaml  magic_link.yaml  password.yaml
configs/schemas/: default.json
core/authtoken/: middleware.go  middleware_test.go  rotator.go  rotator_test.go  token.go  token_test.go
core/courier/: courier.go  courier_database_test.go  courier_flows_test.go  courier_integration_db_test.go  courier_integration_test.go  courier_test.go  (+1 more)
deploy/: .env.example  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init-db.sql  otel-collector.yaml
docs/: admin.md  aegion-db-schema.md  aegion-project.md  aegion-yaml-full.md  aegion.yaml  api-reference.md  architecture.md  config.md  conventions.md  deployment.md  development.md  getting-started.md  inter-module-communication.md  modules.md  oauth.md  observability.md  overview.md  policy.md  project-structure.md  proxy.md  security.md  timeline.md
rust/: Cargo.toml  deny.toml
rust/crypto/: Cargo.toml  build.rs  cbindgen.toml
rust/crypto/include/: crypto.h
rust/crypto/src/: compare.rs  encrypt.rs  error.rs  ffi.rs  hash.rs  lib.rs
rust/jwt/: Cargo.toml  build.rs  cbindgen.toml
rust/jwt/include/: jwt.h
rust/jwt/src/: error.rs  ffi.rs  jwks.rs  keygen.rs  lib.rs  sign.rs  verify.rs
scripts/: build-all.sh  build-module.sh  gen-proto.sh  gen-rust-bindings.sh  lint.sh
templates/: README.md
tests/: Makefile
(+198 files in other folders)
