[package]
name = "aegion-jwt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Aegion JWT engine: signing, verification, and JWKS management"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
rand.workspace = true
libc.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[build-dependencies]
cbindgen.workspace = true
